fix nav-back z-index

--- a/css/mediaquery.css
+++ b/css/mediaquery.css
@@ -28,7 +28,7 @@
     width: 100%;
     height: 100vh;
     background: rgba(0, 0, 0, 0.5);
-    z-index: 0;
+    z-index: 2;
   }
   .nav-button {
     z-index: 3;
